--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "CheemsBot-MD",
+  "name": "goku-md",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/DGXeon/CheemsBot-MD8",
   "logo": "https://pbs.twimg.com/media/FO7fojOakAAyYgt?format=jpg&name=900x900",
